--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "typescript": "^5.2.2",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
+        "vue3-datepicker": "^0.4.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
